--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PUID=1026
-PGID=100
+PUID=1000
+PGID=1000
 TZ=America/Los_Angeles
-LOCVOL1=/volume1/docker-ssd/
-LOCVOL2=/volume2/docker/
-CONNET=dbridge
+LOCVOL1=/path/to/appdata
+LOCVOL2=
+CONNET=name_of_bridge
