--- a/docker-compose-agent.yml
+++ b/docker-compose-agent.yml
@@ -3,17 +3,17 @@ version: "2.1"
 services:
 #
   portainer:
-    image: portainer/portainer-ce:latest
-    container_name: portainer
+    image: portainer/agent:latest
+    container_name: portainer_agent
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
     volumes:
-      - ${LOCVOL1}portainer:/data
       - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker/volumes:/var/lib/docker/volumes
     ports:
-      - 9443:9443
+      - 9001:9001
     restart: unless-stopped
 #
 networks:
