--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PUID=1000
 PGID=1000
 TZ=America/Los_Angeles
 LOCVOL1=/path/to/appdata/
-LOCVOL2=
 CONNET=dbr0
+PORTAINER_IMAGE=portainer/portainer-ee:alpine-sts
