--- a/docker-compose-be.yml
+++ b/docker-compose-be.yml
@@ -2,7 +2,7 @@
 services:
 #
   portainer:
-    image: portainer/portainer-ee:alpine-sts #portainer/portainer-ee:sts
+    image: portainer/portainer-ee:latest # portainer/portainer-ee:alpine-sts / portainer/portainer-ee:sts
     container_name: portainer
     environment:
       - PUID=${PUID}
